# CSC4140-ComputerGraphics

./: Assignment1.cpp  CMakeLists.txt  README.md
Assignment1/: Assignment1.cpp  CMakeLists.txt  compile_run.sh
Assignment2/: CMakeLists.txt  README.md  Report.md  demos.h  main.cpp  test.sh
Assignment3/: CMakeLists.txt
Assignment3&4/CGL/: CMakeCache.txt  install_manifest.txt
Assignment3&4/src/: CMakeLists.txt  rasterizer.cpp  rasterizer.h  texture.cpp  utils.h
Assignment3/CGL/: Makefile  cmake_install.cmake
Assignment3/src/: texture.cpp  transforms.cpp
Assignment4/: CMakeLists.txt
Assignment4/bzc/: curve3.bzc
Assignment4/src/: student_code.cpp
Assignment5/RayTracing1/: CMakeLists.txt  a.out  run.sh  test.cpp
Assignment5/RayTracing1/src/pathtracer/: advanced_bsdf.cpp  bsdf.cpp  camera.cpp  pathtracer.cpp  raytraced_renderer.cpp
Assignment5/RayTracing1/src/scene/: bbox.cpp  bvh.cpp  sphere.cpp  triangle.cpp
Assignment5/RayTracing1/src/scene/collada/: collada.cpp
Assignment5/src/: student_code.cpp
Assignment6/Assignment6/: run.sh
Assignment6/Assignment6/src/pathtracer/: pathtracer.cpp
Assignment6/Assignment6/src/scene/: environment_light.cpp
Assignment6/hw7_pathtracer/: CMakeLists.txt
Assignment6/hw7_pathtracer/src/pathtracer/: advanced_bsdf.cpp  camera_lens.cpp
Assignment6/hw7_pathtracer/src/scene/: environment_light.cpp
